--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -21,7 +21,7 @@
 
             <tr>
                 {% for driver in round %}
-                <td>{{ round1['driver']['car_num'] }} - {{ round1['driver']['drv_full'] }}</td>
+                <td>{{ driver['car_num'] }} - {{ driver['drv_full'] }}</td>
                 {% endfor %}
             </tr>
             {% endfor %}
