troubleshooting ajax cross origin errors

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -116,7 +116,7 @@ $(document).ready(function() {
             $('#loadRaceResult').hide();
             $('#entrant_file').hide();
             $('#entrant_type').hide();
-         } else if (checkedValue == "Qualify") {
+         } else if (checkedValue == "Race_Results") {
             $('#loadRaces').hide();
             $('#loadEntrants').hide();
             $('#loadQualify').show();
