--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -119,7 +119,7 @@ $(document).ready(function() {
          } else if (checkedValue == "Race_Results") {
             $('#loadRaces').hide();
             $('#loadEntrants').hide();
-            $('#loadRaceResults').show();
+            $('#loadRaceResult').show();
             $('#qual_file').hide();
             $('#qual_type').hide();
          } else {
