--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -76,7 +76,7 @@
         </div>
         <button type="submit" class="btn btn-success" >Load Data</button>
     </form>
-    <form id="loadRaceResult" action="/nascar/load" method="post">
+    <form id="loadRaceResult" action="/nascar/race_results" method="post">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div class="form-row">
             <div class="form-group col-md-6" id="race_result_type">
