--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -22,7 +22,7 @@
 
             <tr>
                 {% for driver in round %}
-                <td class="{{ username }}">{{ driver['car_num'] }} - {{ driver['drv_full'] }}</td>
+                <td class="{{ driver['username'] }}">{{ driver['car_num'] }} - {{ driver['drv_full'] }}</td>
                 <td class="points">{{ driver['position']  }}</td>
                 {% endfor %}
             </tr>
