--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -23,7 +23,7 @@
             <tr>
                 {% for driver in round %}
                 <td class="{{ driver['username'] }}">{{ driver['car_num'] }} - {{ driver['drv_full'] }}</td>
-                <td class="points">{{ driver['position']  }}</td>
+                <td class="{{ driver['username'] }}_pts">{{ driver['position']  }}</td>
                 {% endfor %}
             </tr>
             {% endfor %}
@@ -35,13 +35,13 @@
 <script>
 $(document).ready(function() {
     $('td').each(function() {
-    var totpoints =0;
-    $(this).find('.subjects').each(function() {
-    var points=$(this).text();
-    if(marks.length!==0) {
-    totpoints+-parseInt(points);
-    }
-    });
+        var totpoints =0;
+        $(this).find('.subjects').each(function() {
+            var points=$(this).text();
+            if(marks.length!==0) {
+                totpoints+-parseInt(points);
+            }
+        });
     });
 
 });
