--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -12,7 +12,7 @@
         <thead class="thead-light">
             <tr>
                 {% for user in users %}
-                <th scope="col">{{ user }}</th>
+                <th class="user" scope="col">{{ user }}</th>
                 <th scope="col">pts</th>
                 {% endfor %}
             </tr>
@@ -22,8 +22,8 @@
 
             <tr>
                 {% for driver in round %}
-                <td class="{{ driver['username'] }}">{{ driver['car_num'] }} - {{ driver['drv_full'] }}</td>
-                <td class="{{ driver['username'] }}_pts">{{ driver['position']  }}</td>
+                <td>{{ driver['car_num'] }} - {{ driver['drv_full'] }}</td>
+                <td class="{{ driver['username'] }}">{{ driver['position']  }}</td>
                 {% endfor %}
             </tr>
             {% endfor %}
@@ -34,14 +34,16 @@
 
 <script>
 $(document).ready(function() {
-    $('td').each(function() {
-        var totpoints =0;
-        $(this).find('.subjects').each(function() {
-            var points=$(this).text();
-            if(marks.length!==0) {
-                totpoints+-parseInt(points);
-            }
+    $('th').each(function() {
+        var userpoints =[];
+        $(this).find('.user').each(function() {
+            userpoints[$(this).class()] = 0;
+
         });
+        for (var key in userpoints) {
+            var value = userpoints[key];
+            console.log(key + "=" + value
+        }
     });
 
 });
