--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -45,7 +45,7 @@ $(document).ready(function() {
             console.log(key + "=" + value
         }
     });
-
+console.log("the frig- ready");
 });
 
 </script>
