--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -42,7 +42,7 @@ $(document).ready(function() {
         });
         for (var key in userpoints) {
             var value = userpoints[key];
-            console.log(key + "=" + value
+            console.log(key + "=" + value);
         }
     });
 console.log("the frig- ready");
