--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -36,7 +36,7 @@
 $(document).ready(function() {
     $('th').each(function() {
         var userpoints =[];
-        userpoints[$(this).getClass()] = 0;
+        userpoints[$(this).className] = 0;
         for (var key in userpoints) {
             var value = userpoints[key];
             console.log(key + "=" + value);
