--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -35,14 +35,12 @@
 <script>
 $(document).ready(function() {
     $('th').each(function() {
-        var userpoints =[];
-        userpoints[$(this).className] = 0;
-        for (var key in userpoints) {
-            var value = userpoints[key];
-            console.log(key + "=" + value);
+
+        var userpoints[$(this).className] = 0;
+
         }
     });
-    for (var key in userpoints) {
+    for ( key in userpoints) {
             var value = userpoints[key];
             console.log(key + "=" + value);
         }
