--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -36,7 +36,7 @@
 $(document).ready(function() {
     $('th').each(function() {
 
-        var userpoints[$(this).className] = 0;
+        var userpoints{$(this).className} = 0;
 
         }
     });
