add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -35,8 +35,8 @@
 <script>
 $(document).ready(function() {
     $('th').each(function() {
-
-        var userpoints{$(this).className} = 0;
+        var userpoints = {}
+        userpoints[$(this).className] = 0;
 
         }
     });
