add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -35,10 +35,10 @@
 <script>
 $(document).ready(function() {
     $('th').each(function() {
-        var userpoints = {}
+        var userpoints = {};
         userpoints[$(this).className] = 0;
 
-        }
+
     });
     for ( key in userpoints) {
             var value = userpoints[key];
