--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -40,7 +40,7 @@ $(document).ready(function() {
 
 
     });
-    for ( key in userpoints) {
+    for (var key in userpoints) {
             var value = userpoints[key];
             console.log(key + "=" + value);
         }
