--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -37,7 +37,7 @@ $(document).ready(function() {
      var userpoints = {};
     $('th').each(function() {
 
-        userpoints[$(this).text()] = 0;
+        userpoints[$(this).val()] = 0;
 
 
     });
