--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -36,8 +36,10 @@
 $(document).ready(function() {
      var userpoints = {};
     $('th').each(function() {
-
         userpoints[$(this).text()] = 0;
+        $('td').each(function) {
+            var i = $(this).className;
+            userpoints[i] = userpoints{i] + parseInt($(this).text)
 
 
     });
