add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -39,7 +39,7 @@ $(document).ready(function() {
         userpoints[$(this).text()] = 0;
         $('td').each(function() {
             var i = $(this).className;
-            userpoints[i] = userpoints{i] + parseInt($(this).text)
+            userpoints[i] = userpoints[i] + parseInt($(this).text)
         });
 
     });
