--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -38,7 +38,7 @@ $(document).ready(function() {
     $('th').each(function() {
         userpoints[$(this).text()] = 0;
         $('td').each(function() {
-            var i = $(this).className();
+            var i = $(this).attr('class');
             console.log("value i is " + i);
             userpoints[i] = userpoints[i] + parseInt($(this).text)
         });
