add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -22,7 +22,7 @@
 
             <tr>
                 {% for driver in round %}
-                <td>{{ driver['car_num'] }} - {{ driver['drv_full'] }}</td>
+                <td class="null">{{ driver['car_num'] }} - {{ driver['drv_full'] }}</td>
                 <td class="{{ driver['username'] }}">{{ driver['position']  }}</td>
                 {% endfor %}
             </tr>
