add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -44,7 +44,7 @@ $(document).ready(function() {
         if (i != 'null') {
             console.log("value i is " + i);
             console.log(userpoints[i])
-            userpoints[i] = (userpoints[i] += parseInt($(this).text)
+            userpoints[i] = userpoints[i] += parseInt($(this).text)
 
             }
     });
