add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -31,6 +31,7 @@
                 {% for user in users %}
                 <td class="total_pts"><b>Total</b></td>
                 <td class="{{ user  }}_tot"><b>0</b></td>
+                {% endfor %}
             </tr>
         </tbody>
 
