--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -58,7 +58,7 @@ $(document).ready(function() {
         var i_tot = $(this).attr('class') + "_tot";
         var i = $(this).attr('class');
         if ($(this).attr('class') == i_tot)  {
-            console.log(userpoints[i])
+            console.log("userpoints " + userpoints[i])
             $(this).text(userpoints[i]);
         }
     });
