--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -30,7 +30,7 @@
             <tr>
                 {% for user in users %}
                 <td class="total_pts"><b>Total</b></td>
-                <td class="{{ user  }}_tot"><b>0</b></td>
+                <td class="{{ user  }}_tot"><b>{{  user  }}</b></td>
                 {% endfor %}
             </tr>
         </tbody>
@@ -56,7 +56,7 @@ $(document).ready(function() {
     });
     $('td').each(function() {
         var i_tot = $(this).attr('class') + "_tot";
-        var i = $(this).attr('class');
+        var i = $(this).attr('text');
         if ($(this).attr('class') == i_tot)  {
             console.log("userpoints " + userpoints[i])
             $(this).text(userpoints[i]);
