--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -59,7 +59,7 @@ $(document).ready(function() {
         var i = $(this).attr('text');
         if ($(this).attr('class') == i_tot)  {
             console.log("userpoints " + userpoints[i])
-            $(this).text(value of userpoints[i]);
+            $(this).val(userpoints[i]);
         }
     });
 
