--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -58,7 +58,7 @@ $(document).ready(function() {
         var i_tot = $(this).attr('class') + "_tot";
         var i = $(this).text();
         if ($(this).attr('class') == i_tot)  {
-            console.log("userpoints " + userpoints[i])
+            console.log("userpoints " + parseInt(userpoints[i]))
             $(this).val(parseInt(userpoints[i]));
         }
     });
