add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -57,6 +57,8 @@ $(document).ready(function() {
     $('td').each(function() {
         var i_tot = $(this).attr('class') + "_tot";
         var i = $(this).text();
+        console.log("tot val " +i_tot)
+        console.log("no tot val " +i)
         if ($(this).attr('class') == i_tot)  {
             console.log("userpoints " + parseInt(userpoints[i]))
             $(this).val(parseInt(userpoints[i]));
