add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
             }
     });
     $('td').each(function() {
-        var i_tot = $(this).attr('class') + "_tot";
+        var i_tot = $(this).attr('class');
         var i = $(this).text();
         console.log("tot val " +i_tot)
         console.log("no tot val " +i)
