--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -54,7 +54,7 @@ $(document).ready(function() {
             userpoints[i] = userpoints[i] += parseInt($(this).text())
             }
     });
-    userpoints.each(function() {
+    $(userpoints).each(function() {
         var user = $(this)
         //$('td')var i_tot = $(this).attr('class');
         //var i = $(this).text();
