add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
             }
     });
     $(userpoints).each(function() {
-        var user = $(this)
+        var user = $(this).value()
         //$('td')var i_tot = $(this).attr('class');
         //var i = $(this).text();
 
