add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -54,7 +54,7 @@ $(document).ready(function() {
             userpoints[i] = userpoints[i] += parseInt($(this).text())
             }
     });
-    $.each(userpoints),  function(key, value) {
+    $.each(userpoints,  function(key, value) {
         var user = key + "_tot";
         var total = value;
         //$('td') = $(this).attr('class');
