add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -61,8 +61,8 @@ $(document).ready(function() {
         //var i = $(this).text();
 
        // if ($(this).attr('class') == i_tot)  {
-           console.log("this one "user);
-           console.log("that one "total);
+           console.log("this one " + user);
+           console.log("that one " + total);
        //     console.log("no tot val " +i);
        //     console.log("userpoints " + parseInt(userpoints[i]));
        //     $(this).val(parseInt(userpoints[i]));
