--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -55,9 +55,9 @@ $(document).ready(function() {
             }
     });
     $.each(userpoints,  function(key, value) {
-        var user = key + "_tot";
+        var user = "." + key + "_tot";
         var total = value;
-        //$('td') = $(this).attr('class');
+        $(user).val(total;
         //var i = $(this).text();
 
        // if ($(this).attr('class') == i_tot)  {
