--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -57,7 +57,7 @@ $(document).ready(function() {
     $.each(userpoints,  function(key, value) {
         var user = "." + key + "_tot";
         var total = value;
-        $(user).val(total;
+        $(user).val(total);
         //var i = $(this).text();
 
        // if ($(this).attr('class') == i_tot)  {
