--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
             }
     });
     $.each(userpoints,  function(key, value) {
-        var user = "." + key + "_tot";
+        var user = '".' + key + '_tot"';
         var total = value;
         $(user).val(total);
         //var i = $(this).text();
