--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -57,11 +57,12 @@ $(document).ready(function() {
     $.each(userpoints,  function(key, value) {
         var user = '.' + key + '_tot';
         var total = value;
+        var stuff = $(user).val();
         $(user).val(total);
         //var i = $(this).text();
 
        // if ($(this).attr('class') == i_tot)  {
-           console.log("this one " + user);
+           console.log("this one " + stuff);
            console.log("that one " + total);
        //     console.log("no tot val " +i);
        //     console.log("userpoints " + parseInt(userpoints[i]));
