add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -57,7 +57,7 @@ $(document).ready(function() {
     $.each(userpoints,  function(key, value) {
         var user = '.' + key + '_tot';
         var total = value;
-        var stuff = $(user).val();
+        var stuff = $('.bob_tot').val();
         $(user).val(total);
         //var i = $(this).text();
 
