add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -30,7 +30,7 @@
             <tr>
                 {% for user in users %}
                 <td class="total_pts"><b>Total</b></td>
-                <td class="{{ user  }}_tot"><b>{{  user  }}</b></td>
+                <td class="{{ user  }}_tot"><b></b></td>
                 {% endfor %}
             </tr>
         </tbody>
