add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -63,6 +63,7 @@ $(document).ready(function() {
 
        // if ($(this).attr('class') == i_tot)  {
            console.log("this one " + stuff);
+           console.log("this one " + user);
            console.log("that one " + total);
        //     console.log("no tot val " +i);
        //     console.log("userpoints " + parseInt(userpoints[i]));
