--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -63,9 +63,9 @@ $(document).ready(function() {
         //var i = $(this).text();
 
        // if ($(this).attr('class') == i_tot)  {
-           console.log("this one " + stuff);
+           console.log("which one " + stuff);
            console.log("this one " + user);
-           console.log("this one " + user2);
+           console.log("put  one " + user2);
            console.log("that one " + total);
        //     console.log("no tot val " +i);
        //     console.log("userpoints " + parseInt(userpoints[i]));
