--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -57,7 +57,7 @@ $(document).ready(function() {
     $.each(userpoints,  function(key, value) {
         var user = '.' + key + '_tot';
         var user2 = key + '_tot';
-        var total = value;
+        var total = parseInt(value);
         var stuff = $(user).val();
         $(user).val(total);
         //var i = $(this).text();
