add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -58,7 +58,7 @@ $(document).ready(function() {
         var user = '.' + key + '_tot';
         var user2 = key + '_tot';
         var total = parseInt(value);
-        var stuff = $(user).val();
+        var stuff = $(".bob_tot").val();
         $(user).val(total);
         //var i = $(this).text();
 
