--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -55,10 +55,12 @@ $(document).ready(function() {
             }
     });
     $.each(userpoints,  function(key, value) {
+        var stuff = $(".bob_tot").val();
         var user = '.' + key + '_tot';
         var user2 = key + '_tot';
         var total = parseInt(value);
-        var stuff = $(".bob_tot").val();
+        var stuff2 = $(user2).val();
+
         $(user).val(total);
         //var i = $(this).text();
 
@@ -67,6 +69,7 @@ $(document).ready(function() {
            console.log("this one " + user);
            console.log("put  one " + user2);
            console.log("that one " + total);
+           console.log("that one " + stuff2);
        //     console.log("no tot val " +i);
        //     console.log("userpoints " + parseInt(userpoints[i]));
        //     $(this).val(parseInt(userpoints[i]));
