add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -69,7 +69,7 @@ $(document).ready(function() {
            console.log("this one " + user);
            console.log("put  one " + user2);
            console.log("that one " + total);
-           console.log("that one " + stuff2);
+           console.log("shit one " + stuff2);
        //     console.log("no tot val " +i);
        //     console.log("userpoints " + parseInt(userpoints[i]));
        //     $(this).val(parseInt(userpoints[i]));
