add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -65,11 +65,11 @@ $(document).ready(function() {
         //var i = $(this).text();
 
        // if ($(this).attr('class') == i_tot)  {
-           console.log("which one " + stuff);
-           console.log("this one " + user);
-           console.log("put  one " + user2);
-           console.log("that one " + total);
-           console.log("shit one " + stuff2);
+           console.log("stuff one " + stuff);
+           console.log("user one " + user);
+           console.log("user2  one " + user2);
+           console.log("total one " + total);
+           console.log("stuff2 one " + stuff2);
        //     console.log("no tot val " +i);
        //     console.log("userpoints " + parseInt(userpoints[i]));
        //     $(this).val(parseInt(userpoints[i]));
