--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -56,12 +56,12 @@ $(document).ready(function() {
     });
     $.each(userpoints,  function(key, value) {
         var stuff = $('td[class="bob_tot"]').val();
-        var user = '.' + key + '_tot';
-        var user2 = key + '_tot';
-        var total = parseInt(value);
-        var stuff2 = $(user2).val();
+        //var user = '.' + key + '_tot';
+        //var user2 = key + '_tot';
+        //var total = parseInt(value);
+        //var stuff2 = $(user2).val();
 
-        $('td[class="' + user2 + '"]').val(total);
+        $('td[class="' + user2 + '"]').attr(val(total));
         //var i = $(this).text();
 
        // if ($(this).attr('class') == i_tot)  {
