add results py file with load from sport radar

--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -57,7 +57,7 @@ $(document).ready(function() {
     $.each(userpoints,  function(key, value) {
         var stuff = $('td[class="bob_tot"]').val();
         //var user = '.' + key + '_tot';
-        //var user2 = key + '_tot';
+        var user2 = key + '_tot';
         //var total = parseInt(value);
         //var stuff2 = $(user2).val();
 
