--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
             }
     });
     $.each(userpoints,  function(key, value) {
-        var stuff = $('td[class="bob_tot"]').val();
+        var stuff = $('td[class="bob_tot"]').text();
         var user = '.' + key + '_tot';
         var user2 = key + '_tot';
         var total = parseInt(value);
