--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -61,7 +61,7 @@ $(document).ready(function() {
         var total = parseInt(value);
         var stuff2 = $(user2).val();
 
-        $('td[class="' + user2 + '"]').val(total);
+        $('td[class="' + user2 + '"]').text(total);
         //var i = $(this).text();
 
        // if ($(this).attr('class') == i_tot)  {
