add results py file with load from sport radar

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -84,7 +84,7 @@
                 <input type="text" id="typeRaceResult" class="form-control" name="type" value="races" readonly>
             </div>
             <div class="input-group mb-3">
-                <a href="#" id="process_input_rr"><select class="custom-select" id="series_drop_down_rr" name="series_drop_down">
+                <a href="#" id="process_input_rr"><select class="custom-select" id="series_drop_down_rr" name="series_drop_down_rr">
                     <option selected>Choose Series</option>
                     <option value="sc">CUP</option>
                     <option value="xf">XFINITY</option>
