change to pool result

--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-
+<a href="/test"><button type="submit" class="btn btn-primary" >Database Replace Test</button></a>
 
         <p>{{  text  }}</p>
 
