change to pool result

--- a/src/templates/create_pool.html
+++ b/src/templates/create_pool.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <div class="formwrapper">
+    <a href="/nascar">Nascar Home</a>
 <div class="page-header" id="Create_Pool">
     <h1>Create Pool</h1>
 </div>
