--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -5,6 +5,7 @@
 
 <form method="post">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+    <a href="/nascar">Nascar Home</a>
 </form>
 <div class="container">
     <h2>Pool Results</h2>
