--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -3,6 +3,7 @@
 
 <form method="post">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+    <a href="/nascar">Nascar Home</a>
 </form>
 <div class="container">
     <h2>Races Loaded</h2>
