--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <div class="container p-3 my-3">
+    <a href="/nascar">Nascar Home</a>
 <h1>Welcome to Pool: {{room_data.room_name}}</h1>
 <h3>{{  username  }}</h3>
 <input type="hidden" id="room_idA" name="room_idA" value="{{  room_data._id  }}">
